添加JavaFX运行时问题完整解决方案
主要添加：
1. JAVAFX_RUNTIME_SOLUTIONS.md - 详细的问题分析和解决方案
2. run-with-javafx.bat - Windows自动化启动脚本
3. run-with-javafx.sh - Linux/Mac自动化启动脚本
4. 更新README.md - 添加JavaFX问题的解决指南

解决'缺少 JavaFX 运行时组件'错误：
- 提供多种运行方式
- 自动检测和尝试不同方法
- 包含详细的故障排除步骤
- 推荐下载包含JavaFX的Java发行版